# floating

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  floating.sln
src/floating/: lffGen.cpp  libFloatingMain.hpp  libFloatingTests.hpp
src/tests/: CMakeLists.txt  main_unix.cpp  main_win.cpp  tests.cpp  tests.vcxproj  tests.vcxproj.filters
